Add: header img, buttons, img buttons + css for base level

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </section>
             <section class="col-12 col-md-6">
-                <div class="p-3 border">
+                <div class="p-3 border bg-light">
                     <h2>Section 2</h2>
                     <p>Content for section 2 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
