Add: img buttons to CPU side + CSS

--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
     <main class="container my-4">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0">
-                <div class="p-3 border bg-light">
+                <div class="p-3 border">
                     <h2>Section 1</h2>
                     <p>Content for section 1 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" class="btn move-choice-btn" id="rock" ><img src="assets/images/stoneBtn.webp"></button>
-                            <button type="button" class="btn move-choice-btn" id="paper"><img src="assets/images/stoneBtn.webp"></button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="rock" ><img src="assets/images/stoneBtn.webp">Rock</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="paper"><img src="assets/images/stoneBtn.webp">Paper</button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn move-choice-btn" id="scissors"><img src="assets/images/stoneBtn.webp"></button>
-                            <button type="button" class="btn move-choice-btn" id="lizard"><img src="assets/images/stoneBtn.webp"></button>
-                            <button type="button" class="btn move-choice-btn" id="spock"><img src="assets/images/stoneBtn.webp"></button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="scissors"><img src="assets/images/stoneBtn.webp">Scissors</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="lizard"><img src="assets/images/stoneBtn.webp">Lizard</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="spock"><img src="assets/images/stoneBtn.webp">Spock</button>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="col-12 col-md-6">
-                <div class="p-3 border bg-light">
+                <div class="p-3 border">
                     <h2>Section 2</h2>
                     <p>Content for section 2 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" id="CPURock" class="btn btn-primary mx-1">Rock</button>
-                            <button type="button" id="CPUPaper" class="btn btn-primary mx-1">Paper</button>
+                            <button type="button" id="CPURock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Rock</button>
+                            <button type="button" id="CPUPaper" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Paper</button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" id="CPUScissors" class="btn btn-primary mx-1">Scissors</button>
-                            <button type="button" id="CPULizard" class="btn btn-primary mx-1">Lizard</button>
-                            <button type="button" id="CPUSpock" class="btn btn-primary mx-1">Spock</button>
+                            <button type="button" id="CPUScissors" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Scissors</button>
+                            <button type="button" id="CPULizard" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Lizard</button>
+                            <button type="button" id="CPUSpock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Spock</button>
                         </div>
                     </div>
                 </div>
