--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <p>Content for section 1 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" class="btn mx-1 move-choice-btn" id="rock" ><img src="assets/images/stoneBtn.webp">Rock</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="paper"><img src="assets/images/stoneBtn.webp">Paper</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="rock" ><img src="assets/images/stoneBtn.webp" id="UserRockImg">Rock</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="paper"><img src="assets/images/stoneBtn.webp" id="UserPaperImg">Paper</button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn mx-1 move-choice-btn" id="scissors"><img src="assets/images/stoneBtn.webp">Scissors</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="lizard"><img src="assets/images/stoneBtn.webp">Lizard</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="spock"><img src="assets/images/stoneBtn.webp">Spock</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="scissors"><img src="assets/images/stoneBtn.webp" id="UserScissorsImg">Scissors</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="lizard"><img src="assets/images/stoneBtn.webp" id="UserLizardImg">Lizard</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="spock"><img src="assets/images/stoneBtn.webp" id="UserSpockImg">Spock</button>
                         </div>
                     </div>
                 </div>
@@ -41,13 +41,13 @@
                     <p>Content for section 2 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" id="CPURock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Rock</button>
-                            <button type="button" id="CPUPaper" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Paper</button>
+                            <button type="button" id="CPURock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPURockImg">Rock</button>
+                            <button type="button" id="CPUPaper" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUPaperImg">Paper</button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" id="CPUScissors" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Scissors</button>
-                            <button type="button" id="CPULizard" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Lizard</button>
-                            <button type="button" id="CPUSpock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp">Spock</button>
+                            <button type="button" id="CPUScissors" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUScissorsImg">Scissors</button>
+                            <button type="button" id="CPULizard" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPULizardImg">Lizard</button>
+                            <button type="button" id="CPUSpock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUSpockImg">Spock</button>
                         </div>
                     </div>
                 </div>
