Add: html formatting

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <p>Content for section 2 goes here.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" id="CPURock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPURockImg">Rock</button>
-                            <button type="button" id="CPUPaper" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUPaperImg">Paper</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPURock"><img src="assets/images/stoneBtn.webp" id="CPURockImg">Rock</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUPaper"><img src="assets/images/stoneBtn.webp" id="CPUPaperImg">Paper</button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" id="CPUScissors" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUScissorsImg">Scissors</button>
-                            <button type="button" id="CPULizard" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPULizardImg">Lizard</button>
-                            <button type="button" id="CPUSpock" class="btn mx-1 CPU-btn"><img src="assets/images/stoneBtn.webp" id="CPUSpockImg">Spock</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUScissors"><img src="assets/images/stoneBtn.webp" id="CPUScissorsImg">Scissors</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPULizard"><img src="assets/images/stoneBtn.webp" id="CPULizardImg">Lizard</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUSpock"><img src="assets/images/stoneBtn.webp" id="CPUSpockImg">Spock</button>
                         </div>
                     </div>
                 </div>
