--- a/index.html
+++ b/index.html
@@ -11,10 +11,35 @@
 </head>
 
 <body>
-
     <header class="d-flex justify-content-center">
-        <img src="assets/images/Header.webp" alt="Western Background" class="img-fluid headerImage">
+    <img src="assets/images/Header.webp" alt="Spock It To Me Western Town" class="img-fluid headerImage">
     </header>
+
+        <!-- Centered Instructions Modal Trigger Button -->
+        <div class="d-flex justify-content-center my-4">
+            <button type="button" class="btn btn-info btn-lg" data-bs-toggle="modal" data-bs-target="#instructionsModal">
+                How to Play
+            </button>
+        </div>
+
+        <!-- Instructions Modal -->
+        <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-modal="true" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <h5 class="modal-title text-center w-100" id="instructionsModalLabel">How to Play</h5>
+                        <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Instructions go here -->
+                        <p>Instructions will be added here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <main class="container my-4">
         <div class="row">
