--- a/index.html
+++ b/index.html
@@ -41,6 +41,82 @@
             </div>
         </div>
 
+        <!-- Start/Stop and Modal Trigger Buttons -->
+        <div class="container my-4">
+            <div class="row">
+                <div class="col-12 col-md-6 d-flex justify-content-start gap-3 mb-3 mb-md-0">
+                    <button type="button" class="btn btn-success btn-lg" id="startBtn">Start</button>
+                    <button type="button" class="btn btn-danger btn-lg" id="stopBtn">Stop</button>
+                </div>
+                <div class="col-12 col-md-6 d-flex justify-content-end gap-3">
+                    <button type="button" class="btn btn-primary btn-lg" id="difficultyBtn" data-bs-toggle="modal" data-bs-target="#difficultyModal">Difficulty</button>
+                    <button type="button" class="btn btn-warning btn-lg" id="bestOfBtn" data-bs-toggle="modal" data-bs-target="#bestOfModal">Best Of</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Difficulty Modal -->
+        <div class="modal fade" id="difficultyModal" tabindex="-1" aria-labelledby="difficultyModalLabel" aria-modal="true" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <h5 class="modal-title text-center w-100" id="difficultyModalLabel">Select Difficulty</h5>
+                        <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="d-flex justify-content-between">
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-success w-100 mb-2" id="easyBtn">Easy</button>
+                                <img src="assets/images/easy.png" alt="Easy difficulty" class="img-fluid" style="max-height:60px;">
+                            </div>
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-primary w-100 mb-2" id="mediumBtn">Medium</button>
+                                <img src="assets/images/medium.png" alt="Medium difficulty" class="img-fluid" style="max-height:60px;">
+                            </div>
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-danger w-100 mb-2" id="hardBtn">Hard</button>
+                                <img src="assets/images/hard.png" alt="Hard difficulty" class="img-fluid" style="max-height:60px;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Best Of Modal -->
+        <div class="modal fade" id="bestOfModal" tabindex="-1" aria-labelledby="bestOfModalLabel" aria-modal="true" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <h5 class="modal-title text-center w-100" id="bestOfModalLabel">Best Of:</h5>
+                        <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="d-flex justify-content-between">
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-info w-100 mb-2" id="bestOf3Btn">3</button>
+                                <img src="assets/images/three.png" alt="Best of 3" class="img-fluid" style="max-height:60px;">
+                            </div>
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-info w-100 mb-2" id="bestOf5Btn">5</button>
+                                <img src="assets/images/five.png" alt="Best of 5" class="img-fluid" style="max-height:60px;">
+                            </div>
+                            <div class="text-center flex-fill mx-2">
+                                <button type="button" class="btn btn-outline-info w-100 mb-2" id="endlessBtn">Endless</button>
+                                <img src="assets/images/endless.png" alt="Endless mode" class="img-fluid" style="max-height:60px;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <main class="container my-4">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0">
