--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         </div>
 
     <main class="container my-4">
+
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0">
                 <div class="p-3 border">
@@ -136,7 +137,8 @@
                     </div>
                 </div>
             </section>
-            <section class="col-12 col-md-6">
+
+            <section class="col-12 col-md-6 mb-4 mb-md-0">
                 <div class="p-3 border">
                     <h2>Section 2</h2>
                     <p>Content for section 2 goes here.</p>
@@ -154,6 +156,7 @@
                 </div>
             </section>
         </div>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
