--- a/index.html
+++ b/index.html
@@ -121,36 +121,36 @@
 
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0">
-                <div class="p-3 border">
-                    <h2>Section 1</h2>
-                    <p>Content for section 1 goes here.</p>
+                <div class="p-3 border text-center">
+                    <h2 class="text-center">Your Move:</h2>
+                    <p class="text-center">Pick Your Move.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" class="btn mx-1 move-choice-btn" id="rock" ><img src="assets/images/rockBtn.webp" id="UserRockImg">Rock</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="paper"><img src="assets/images/paperBtn.webp" id="UserPaperImg">Paper</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="rock" ><img src="assets/images/rockBtn.webp" id="UserRockImg"></button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="paper"><img src="assets/images/paperBtn.webp" id="UserPaperImg"></button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn mx-1 move-choice-btn" id="scissors"><img src="assets/images/scissorsBtn.webp" id="UserScissorsImg">Scissors</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="lizard"><img src="assets/images/lizardBtn.webp" id="UserLizardImg">Lizard</button>
-                            <button type="button" class="btn mx-1 move-choice-btn" id="spock"><img src="assets/images/spockBtn.webp" id="UserSpockImg">Spock</button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="scissors"><img src="assets/images/scissorsBtn.webp" id="UserScissorsImg"></button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="lizard"><img src="assets/images/lizardBtn.webp" id="UserLizardImg"></button>
+                            <button type="button" class="btn mx-1 move-choice-btn" id="spock"><img src="assets/images/spockBtn.webp" id="UserSpockImg"></button>
                         </div>
                     </div>
                 </div>
             </section>
 
             <section class="col-12 col-md-6 mb-4 mb-md-0">
-                <div class="p-3 border">
-                    <h2>Section 2</h2>
-                    <p>Content for section 2 goes here.</p>
+                <div class="p-3 border text-center">
+                    <h2 class="text-center">Opponent Move:</h2>
+                    <p class="text-center">Opponent Picks Their Move.</p>
                     <div class="d-flex flex-column align-items-center py-3">
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" class="btn mx-1 CPU-btn" id="CPURock"><img src="assets/images/rockBtn.webp" id="CPURockImg">Rock</button>
-                            <button type="button" class="btn mx-1 CPU-btn" id="CPUPaper"><img src="assets/images/paperBtn.webp" id="CPUPaperImg">Paper</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPURock"><img src="assets/images/rockBtn.webp" id="CPURockImg"></button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUPaper"><img src="assets/images/paperBtn.webp" id="CPUPaperImg"></button>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn mx-1 CPU-btn" id="CPUScissors"><img src="assets/images/scissorsBtn.webp" id="CPUScissorsImg">Scissors</button>
-                            <button type="button" class="btn mx-1 CPU-btn" id="CPULizard"><img src="assets/images/lizardBtn.webp" id="CPULizardImg">Lizard</button>
-                            <button type="button" class="btn mx-1 CPU-btn" id="CPUSpock"><img src="assets/images/spockBtn.webp" id="CPUSpockImg">Spock</button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUScissors"><img src="assets/images/scissorsBtn.webp" id="CPUScissorsImg"></button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPULizard"><img src="assets/images/lizardBtn.webp" id="CPULizardImg"></button>
+                            <button type="button" class="btn mx-1 CPU-btn" id="CPUSpock"><img src="assets/images/spockBtn.webp" id="CPUSpockImg"></button>
                         </div>
                     </div>
                 </div>
