--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
             </section>
         </div>
 
+        <div id="browser-console" style="background:#222;color:#eee;padding:1em;font-family:monospace;max-height:200px;overflow:auto;"></div>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
