Add: bounty to difficulty for visual continuity

--- a/index.html
+++ b/index.html
@@ -67,20 +67,32 @@
                         <div class="d-flex justify-content-between">
                             <div class="text-center flex-fill mx-2">
                                 <button type="button" class="btn btn-outline-success w-100 d-flex flex-column align-items-center py-3" id="easyBtn">
-                                    <img src="assets/images/easy.webp" alt="Easy difficulty" class="img-fluid mb-2" style="max-height:120px;">
+                                    <img src="assets/images/easy.webp" alt="Easy difficulty" class="img-fluid mb-2" style="max-height:300px;">
                                     <span class="w-100 text-center">Easy</span>
+                                        <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                            <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                            1,000
+                                        </div>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
-                                <button type="button" class="btn btn-outline-primary w-100 d-flex flex-column align-items-center py-3" id="mediumBtn">
-                                    <img src="assets/images/medium.webp" alt="Medium difficulty" class="img-fluid mb-2" style="max-height:120px;">
+                                <button type="button" class="btn btn-outline-warning w-100 d-flex flex-column align-items-center py-3" id="mediumBtn">
+                                    <img src="assets/images/medium.webp" alt="Medium difficulty" class="img-fluid mb-2" style="max-height:300px;">
                                     <span class="w-100 text-center">Medium</span>
+                                    <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                        10,000
+                                    </div>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
                                 <button type="button" class="btn btn-outline-danger w-100 d-flex flex-column align-items-center py-3" id="hardBtn">
-                                    <img src="assets/images/hard.webp" alt="Hard difficulty" class="img-fluid mb-2" style="max-height:120px;">
+                                    <img src="assets/images/hard.webp" alt="Hard difficulty" class="img-fluid mb-2" style="max-height:300px;">
                                     <span class="w-100 text-center">Hard</span>
+                                    <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                        100,000
+                                    </div>
                                 </button>
                             </div>
                         </div>
