--- a/index.html
+++ b/index.html
@@ -66,31 +66,34 @@
                     <div class="modal-body">
                         <div class="d-flex justify-content-between">
                             <div class="text-center flex-fill mx-2">
-                                <button type="button" class="btn btn-outline-success w-100 d-flex flex-column align-items-center py-3" id="easyBtn">
-                                    <img src="assets/images/easy.webp" alt="Easy difficulty" class="img-fluid mb-2" style="max-height:300px;">
+                                <button type="button" class="btn btn-outline-success d-flex flex-column align-items-center py-3" id="easyBtn">
+                                    <span class="wanted-label mb-2">WANTED</span>
+                                    <img src="assets/images/easy.webp" alt="Easy difficulty" class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Easy</span>
                                         <div class="d-flex justify-content-center align-items-center w-100 gap-2">
-                                            <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                            <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid peseta-img">
                                             1,000
                                         </div>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
-                                <button type="button" class="btn btn-outline-warning w-100 d-flex flex-column align-items-center py-3" id="mediumBtn">
-                                    <img src="assets/images/medium.webp" alt="Medium difficulty" class="img-fluid mb-2" style="max-height:300px;">
+                                <button type="button" class="btn btn-outline-warning d-flex flex-column align-items-center py-3" id="mediumBtn">
+                                    <span class="wanted-label mb-2">WANTED</span>
+                                    <img src="assets/images/medium.webp" alt="Medium difficulty" class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Medium</span>
                                     <div class="d-flex justify-content-center align-items-center w-100 gap-2">
-                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid peseta-img">
                                         10,000
                                     </div>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
-                                <button type="button" class="btn btn-outline-danger w-100 d-flex flex-column align-items-center py-3" id="hardBtn">
-                                    <img src="assets/images/hard.webp" alt="Hard difficulty" class="img-fluid mb-2" style="max-height:300px;">
+                                <button type="button" class="btn btn-outline-danger d-flex flex-column align-items-center py-3" id="hardBtn">
+                                    <span class="wanted-label mb-2">WANTED</span>
+                                    <img src="assets/images/hard.webp" alt="Hard difficulty" class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Hard</span>
                                     <div class="d-flex justify-content-center align-items-center w-100 gap-2">
-                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid" style="max-height:16px;">
+                                        <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta" class="img-fluid peseta-img">
                                         100,000
                                     </div>
                                 </button>
