--- a/index.html
+++ b/index.html
@@ -22,25 +22,6 @@
             </button>
         </div>
 
-        <!-- Instructions Modal -->
-        <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-modal="true" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header justify-content-center">
-                        <h5 class="modal-title text-center w-100" id="instructionsModalLabel">How to Play</h5>
-                        <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- Instructions go here -->
-                        <p>Instructions will be added here.</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Start/Stop and Modal Trigger Buttons -->
         <div class="container my-4">
             <div class="row">
@@ -98,6 +79,33 @@
                                     </div>
                                 </button>
                             </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Instructions Modal -->
+        <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-modal="true" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <h5 class="modal-title text-center w-100" id="instructionsModalLabel">How to Play</h5>
+                        <button type="button" class="btn-close position-absolute end-0 me-3" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center">Spock It To Me - How To Play Rock, Paper, Scissors, Lizard, Spock.</p>
+                        <img src="assets/images/how-to.webp" alt="How to Play" class="img-fluid how-to-img">
+                        <p class="text-center">Above is a visual representation of which move beats which.</p>
+                        <div class="d-flex justify-content-center align-items-center gap-3 my-3">
+                        <img src="assets/images/rockBtn.webp" alt="Rock" class="img-fluid" style="max-width:60px; border: 2px solid red;">
+                            <img src="assets/images/paperBtn.webp" alt="Paper" class="img-fluid" style="max-width:60px; border: 2px solid yellow;">
+                            <img src="assets/images/scissorsBtn.webp" alt="Scissors" class="img-fluid" style="max-width:60px; border: 2px solid purple;">
+                            <img src="assets/images/lizardBtn.webp" alt="Lizard" class="img-fluid" style="max-width:60px; border: 2px solid green;">
+                            <img src="assets/images/spockBtn.webp" alt="Spock" class="img-fluid" style="max-width:60px; border: 2px solid blue;">
                         </div>
                     </div>
                     <div class="modal-footer">
