--- a/index.html
+++ b/index.html
@@ -63,22 +63,6 @@
         </div>
     </div>
 
-    <!-- Start/Stop and Modal Trigger Buttons -->
-    <div class="container my-4">
-        <div class="row">
-            <div class="col-12 col-md-6 d-flex justify-content-start gap-3 mb-3 mb-md-0">
-                <button type="button" class="btn btn-success btn-lg" id="startBtn">Start</button>
-                <button type="button" class="btn btn-danger btn-lg" id="stopBtn">Stop</button>
-            </div>
-            <div class="col-12 col-md-6 d-flex justify-content-end gap-3">
-                <button type="button" class="btn btn-primary btn-lg" id="difficultyBtn" data-bs-toggle="modal"
-                    data-bs-target="#difficultyModal">Difficulty</button>
-                <button type="button" class="btn btn-warning btn-lg" id="bestOfBtn" data-bs-toggle="modal"
-                    data-bs-target="#bestOfModal">Best Of</button>
-            </div>
-        </div>
-    </div>
-
     <!-- Difficulty Modal -->
     <div class="modal fade" id="difficultyModal" tabindex="-1" aria-labelledby="difficultyModalLabel" aria-modal="true"
         role="dialog">
@@ -235,6 +219,28 @@
                 </div>
             </section>
         </div>
+
+    <!-- Start/Stop and Modal Trigger Buttons -->
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-12 col-md-4 d-flex justify-content-start gap-3 mb-3 mb-md-0">
+                <button type="button" class="btn btn-success btn-lg" id="startBtn">Start</button>
+                <button type="button" class="btn btn-danger btn-lg" id="stopBtn">Stop</button>
+            </div>
+            <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                <div id="scoreCounter" class="px-4 py-2 bg-light rounded border text-center">
+                    <span class="fw-bold scoreTxt">Score:</span>
+                    <span id="playerScore">0</span> - <span id="cpuScore">0</span> - <span id="drawScore">0</span>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 d-flex justify-content-end gap-3">
+                <button type="button" class="btn btn-primary btn-lg" id="difficultyBtn" data-bs-toggle="modal"
+                    data-bs-target="#difficultyModal">Difficulty</button>
+                <button type="button" class="btn btn-warning btn-lg" id="bestOfBtn" data-bs-toggle="modal"
+                    data-bs-target="#bestOfModal">Best Of</button>
+            </div>
+        </div>
+    </div>
 
         <div id="browser-console" style="background:#222;color:#eee;padding:1em;font-family:monospace;max-height:200px;overflow:auto;"></div>
 
