Add: button interactivity in js

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <main class="container my-4">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0">
-                <div class="p-3 border text-center">
+                <div class="p-3 text-center">
                     <h2 class="text-center">Your Move:</h2>
                     <p class="text-center">Pick Your Move.</p>
                     <div class="d-flex flex-column align-items-center py-0">
@@ -192,7 +192,7 @@
             </section>
 
             <section class="col-12 col-md-6 mb-4 mb-md-0">
-                <div class="p-3 border text-center">
+                <div class="p-3 text-center">
                     <h2 class="text-center">Opponent Move:</h2>
                     <p class="text-center">Opponent Picks Their Move.</p>
                     <div class="d-flex flex-column align-items-center py-0">
@@ -230,7 +230,7 @@
             <div class="col-12 col-md-4 d-flex justify-content-center align-items-center order-3 order-md-2">
                 <div id="scoreCounter" class="px-4 py-2 bg-light rounded border text-center w-100">
                     <span class="fw-bold scoreTxt">Score:</span>
-                    <span id="playerScore">0</span> - <span id="cpuScore">0</span> - <span id="drawScore">0</span>
+                    <span id="playerScore" class="text-success">0</span> - <span id="cpuScore" class="text-danger">0</span> - <span id="drawScore" class="text-secondary">0</span>
                 </div>
             </div>
             <div class="col-12 col-md-4 d-flex flex-row justify-content-center justify-content-md-end gap-2 gap-md-3 order-1 order-md-3">
