Add: alt text to button imgs

--- a/index.html
+++ b/index.html
@@ -170,21 +170,21 @@
                     <div class="d-flex flex-column align-items-center py-0">
                         <div class="d-flex justify-content-center mb-0 col-10 mx-auto">
                             <button type="button" class="btn mx-1 move-choice-btn w-auto" id="rock">
-                                <img src="assets/images/rockBtn.webp" id="UserRockImg">
+                                <img src="assets/images/rockBtn.webp" id="UserRockImg" alt="Rock button">
                             </button>
                             <button type="button" class="btn mx-1 move-choice-btn w-auto" id="paper">
-                                <img src="assets/images/paperBtn.webp" id="UserPaperImg">
+                                <img src="assets/images/paperBtn.webp" id="UserPaperImg" alt="Paper button">
                             </button>
                         </div>
                         <div class="d-flex justify-content-center mt-0 col-10 mx-auto">
                             <button type="button" class="btn mx-1 move-choice-btn w-auto" id="scissors">
-                                <img src="assets/images/scissorsBtn.webp" id="UserScissorsImg">
+                                <img src="assets/images/scissorsBtn.webp" id="UserScissorsImg" alt="Scissors button">
                             </button>
                             <button type="button" class="btn mx-1 move-choice-btn w-auto" id="lizard">
-                                <img src="assets/images/lizardBtn.webp" id="UserLizardImg">
+                                <img src="assets/images/lizardBtn.webp" id="UserLizardImg" alt="Lizard button">
                             </button>
                             <button type="button" class="btn mx-1 move-choice-btn w-auto" id="spock">
-                                <img src="assets/images/spockBtn.webp" id="UserSpockImg">
+                                <img src="assets/images/spockBtn.webp" id="UserSpockImg" alt="Spock button">
                             </button>
                         </div>
                     </div>
@@ -198,21 +198,21 @@
                     <div class="d-flex flex-column align-items-center py-0">
                         <div class="d-flex justify-content-center mb-0 col-10 mx-auto">
                             <button type="button" class="btn mx-1 CPU-btn w-auto" id="CPURock">
-                                <img src="assets/images/rockBtn.webp" id="CPURockImg">
+                                <img src="assets/images/rockBtn.webp" id="CPURockImg" alt="CPU Rock button">
                             </button>
                             <button type="button" class="btn mx-1 CPU-btn w-auto" id="CPUPaper">
-                                <img src="assets/images/paperBtn.webp" id="CPUPaperImg">
+                                <img src="assets/images/paperBtn.webp" id="CPUPaperImg" alt="CPU Paper button">
                             </button>
                         </div>
                         <div class="d-flex justify-content-center mt-0 col-10 mx-auto">
                             <button type="button" class="btn mx-1 CPU-btn w-auto" id="CPUScissors">
-                                <img src="assets/images/scissorsBtn.webp" id="CPUScissorsImg">
+                                <img src="assets/images/scissorsBtn.webp" id="CPUScissorsImg" alt="CPU Scissors button">
                             </button>
                             <button type="button" class="btn mx-1 CPU-btn w-auto" id="CPULizard">
-                                <img src="assets/images/lizardBtn.webp" id="CPULizardImg">
+                                <img src="assets/images/lizardBtn.webp" id="CPULizardImg" alt="CPU Lizard button">
                             </button>
                             <button type="button" class="btn mx-1 CPU-btn w-auto" id="CPUSpock">
-                                <img src="assets/images/spockBtn.webp" id="CPUSpockImg">
+                                <img src="assets/images/spockBtn.webp" id="CPUSpockImg" alt="CPU Spock button">
                             </button>
                         </div>
                     </div>
