--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="row g-3 align-items-center text-center">
             <div class="col-12 col-md-4 d-flex flex-row justify-content-center justify-content-md-start gap-2 gap-md-3 order-2 order-md-1">
                 <button type="button" class="btn btn-success btn-lg w-50 w-md-auto" id="startBtn">Start</button>
-                <button type="button" class="btn btn-danger btn-lg w-50 w-md-auto" id="stopBtn">Stop</button>
+                <button type="button" class="btn btn-danger btn-lg w-50 w-md-auto" id="restartBtn">Restart</button>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-center align-items-center order-3 order-md-2">
                 <div id="scoreCounter" class="px-4 py-2 bg-light rounded border text-center w-100">
@@ -246,7 +246,10 @@
 
     </main>
 
+    <canvas id="confetti-canvas"></canvas>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
