Edit HTML to load difficulty images

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <button type="button"
                                 class="btn btn-outline-success d-flex flex-column align-items-center py-3" id="easyBtn">
                                 <span class="wanted-label mb-2">WANTED</span>
-                                <img src="assets/images/easy.webp" alt="Easy difficulty"
+                                <img src="assets/images/Easy.webp" alt="Easy difficulty"
                                     class="img-fluid mb-2 difficulty-img">
                                 <span class="w-100 text-center">Easy</span>
                                 <div class="d-flex justify-content-center align-items-center w-100 gap-2">
@@ -93,7 +93,7 @@
                                 class="btn btn-outline-warning d-flex flex-column align-items-center py-3"
                                 id="mediumBtn">
                                 <span class="wanted-label mb-2">WANTED</span>
-                                <img src="assets/images/medium.webp" alt="Medium difficulty"
+                                <img src="assets/images/Medium.webp" alt="Medium difficulty"
                                     class="img-fluid mb-2 difficulty-img">
                                 <span class="w-100 text-center">Medium</span>
                                 <div class="d-flex justify-content-center align-items-center w-100 gap-2">
@@ -106,7 +106,7 @@
                             <button type="button"
                                 class="btn btn-outline-danger d-flex flex-column align-items-center py-3" id="hardBtn">
                                 <span class="wanted-label mb-2">WANTED</span>
-                                <img src="assets/images/hard.webp" alt="Hard difficulty"
+                                <img src="assets/images/Hard.webp" alt="Hard difficulty"
                                     class="img-fluid mb-2 difficulty-img">
                                 <span class="w-100 text-center">Hard</span>
                                 <div class="d-flex justify-content-center align-items-center w-100 gap-2">
