Add code for 3-2-1-go! and make it so that the emojis dont show until after they display

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             How to Play </button>
     </div>
 
+    <!-- Countdown Display (appears dynamically) -->
+    <div id="countdown-timer-container" class="d-flex justify-content-center"></div>
     <!-- Instructions Modal -->
     <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel"
         aria-modal="true" role="dialog">
