Add 'best of' images

--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
                     <div class="d-flex justify-content-between">
                         <div class="text-center flex-fill mx-2">
                             <button type="button" class="btn btn-outline-info w-100 mb-2" id="bestOf3Btn">3</button>
-                            <img src="assets/images/three.png" alt="Best of 3" class="img-fluid"
+                            <img src="assets/images/three.webp" alt="Best of 3" class="img-fluid"
                                 style="max-height:60px;">
                         </div>
                         <div class="text-center flex-fill mx-2">
                             <button type="button" class="btn btn-outline-info w-100 mb-2" id="bestOf5Btn">5</button>
-                            <img src="assets/images/five.png" alt="Best of 5" class="img-fluid"
+                            <img src="assets/images/five.webp" alt="Best of 5" class="img-fluid"
                                 style="max-height:60px;">
                         </div>
                         <div class="text-center flex-fill mx-2">
                             <button type="button" class="btn btn-outline-info w-100 mb-2"
                                 id="endlessBtn">Endless</button>
-                            <img src="assets/images/endless.png" alt="Endless mode" class="img-fluid"
+                            <img src="assets/images/endless.webp" alt="Endless mode" class="img-fluid"
                                 style="max-height:60px;">
                         </div>
                     </div>
